@@ -1,4 +1,5 @@
 prop.appname=APPNAME
+prop.autocommit=AUTOCOMMIT
 prop.batchsize=BATCHSIZE
 prop.bindaddress=BINDADDRESS
 prop.buffermaxmemory=bufferMaxMemory
